alb.tf
# create application load balancer
resource "aws_lb" "application_load_balancer" {
  name = "${var.project_name}-${var.environment}-alb"
  internal = false 
  load_balancer_type = "application"
  security_groups = [aws_security_group.alb_security_group.id]
  subnets = [aws_subnet.public_subnet_az1.id, aws_subnet.public_subnet_az2.id]
  enable_deletion_protection = false 

  tags = {
    Name = "${var.project_name}-${var.environment}-alb"
  }
}

# create targed group
resource "aws_lb_target_group" "alb_target_group" {
  name = "${var.project_name}-${var.environment}-tg"
  target_type = "ip"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.vpc.id

  health_check {
    healthy_threshold = 5
    interval = 30
    matcher = "200,301,302"
    path = "/"
    port = "traffic-port"
    protocol = "HTTP"
    timeout = 5
    unhealthy_threshold = 2
  }
}

# create a listener on port 443 with forward action
resource "aws_lb_listener" "alb_https_listener" {
  load_balancer_arn = aws_lb.application_load_balancer.arn
  port = 443
  protocol = "HTTPS"
  ssl_policy = "ELBSecurityPolicy-2016-08"
  certificate_arn = aws_acm_certificate.acm_certificate.arn

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.alb_target_group.arn
  }
}
